Fixed background-cover not showing.

--- a/styles/word_correct.css
+++ b/styles/word_correct.css
@@ -1,14 +1,16 @@
 #background-cover {
+    width: 100vw;
+    height: 100vh;
     position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 49;
-    background-color: var(--background);
+    background-color: var(--backgroundLight);
     transition: 250ms ease;
     scale: 0;
-    backdrop-filter: blur(18px) saturate(200%);
-    -webkit-backdrop-filter: blur(18px) saturate(200%);
+    backdrop-filter: blur(5px) saturate(200%);
+    -webkit-backdrop-filter: blur(5px) saturate(200%);
 }
 
 #background-cover.active {
@@ -80,11 +82,11 @@
 }
 
 #confetti {
-    width: 35rem;
+    width: 35vw;
     position: absolute;
-    top: -110%;
-    left: 15%;
-    transform: translateX(-50%) rotate(-30deg);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -70%) rotate(-30deg);
     background-color: transparent;
 }
 
@@ -125,5 +127,12 @@
 
     #confetti {
         width: 100%;
+    }
+}
+
+@media screen and (orientation: landscape) and (max-height: 400px) {
+    
+    #achieved-panel {
+        height: 90%;
     }
 }
